Adds two more faq question
1. How to get the code
2. How to delete all data stored by the bot

--- a/index.html
+++ b/index.html
@@ -256,6 +256,26 @@
                 und der Bot muss "nur" noch drauf aufbauen.
             </div>
         </li>
+        <li>
+            <a class="uk-accordion-title">Wie kann ich meine Daten in Telegram löschen?</a>
+            <div class="uk-accordion-content">
+                Dies ist möglich, aber dann verlierst du deine gespeicherte Klasse und deine ausgewählten Lehrer.
+                <br/>
+                Schreibe dazu <code>/deletedata</code> in den Chat und antworte mit <code>Löschen</code>.
+                <br/>
+                Nun sind alle deine Daten von unseren Servern gelöscht.
+                <br/>
+                Wenn du dich wieder mit dem Bot verbinden möchtest, schreibe einfach eine Nachricht.
+            </div>
+        </li>
+        <li>
+            <a class="uk-accordion-title">Kann ich mir den Code angucken?</a>
+            <div class="uk-accordion-content">
+                Ja das kannst du. Der Code liegt auf <a href="https://github.com/timetablebot/bot">GitHub</a>.
+                <br/>
+                Dabei findest du auch Hilfen, wie du einen eigenen Bot starten kannst.
+            </div>
+        </li>
     </ul>
 
     <br>
