fixes not clickable imprint link

--- a/index.html
+++ b/index.html
@@ -282,11 +282,8 @@
     <br>
 
     <div>
-        <!-- This is a button toggling the modal -->
-        <a href="./imprint.html" class="uk-link-muted" id="imprintToggle">Impressum & Datenschutz</a>
-
         <!-- This is the modal -->
-        <div id="imprint" class="uk-modal-container" uk-modal>
+        <div id="imprint" style="display: none" class="uk-modal-container" uk-modal>
             <div class="uk-modal-dialog uk-modal-body">
                 <button class="uk-modal-close-default" type="button" uk-close></button>
                 <p id="imprint-text">
@@ -298,6 +295,10 @@
                 </p>
             </div>
         </div>
+
+        <!-- This is a button toggling the modal -->
+        <a href="./imprint.html" class="uk-link-muted" id="imprintToggle">Impressum & Datenschutz</a>
+
     </div>
 
     <br>
