Adds some text about Telegram

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
         </li>
         <li>
-            <a class="uk-accordion-title">Wie funktioniert das ganze?</a>
+            <a class="uk-accordion-title">Wie funktioniert das Ganze?</a>
             <div class="uk-accordion-content">
                 Der Bot überprüft öfters im Hintergrund den Stundenplan im Internet und
                 verteilt die passenden Nachrichten an die entsprechenden Leute (also z.B. dich).
@@ -232,9 +232,14 @@
             <a class="uk-accordion-title">Warum Telegram, nicht WhatsApp?</a>
             <div class="uk-accordion-content">
                 WhatsApp ist genauso ein Messenger wie Telegram.
-                Aber WhatsApp fehlt eine entscheide Funktionalität:
+                Leider fehlt WhatsApp eine entscheide Funktionalität:
                 Es gibt keine offizielle Programmierschnittstelle.
-                Damit wäre es ein deutlicher Mehraufwand für mich das Ganze mit WhatsApp zum Laufen zu bringen.
+                Somit wäre es für mich ein deutlicher Mehraufwand, den Bot über WhatsApp zu betreiben.
+                <br/><br/>
+                Ich distanziere mich bewusst von rechtsextremen und illegalem Inhalten auf dieser Plattform.
+                Leider ist Telegram weiterhin das beste Tool, um das Problem der Kommunikation mit diesem Bot zu lösen.
+                Es gibt es dort aber guten Content, zum Beispiel vom
+                <a href="https://www.tagesschau.de/inland/messenger-109.html">@ARD_tagesschau_Bot</a>.
             </div>
         </li>
         <li>
