Shutdown of the tool

--- a/index.html
+++ b/index.html
@@ -51,18 +51,22 @@
         Die Alte Landesschule stellt ihren Vertretungsplan auch im Internet zur Verfügung.
         <br>
         <br>
-        Wäre es nicht praktisch, wenn du einfach eine <b>Benachrichtigung auf dein Handy</b> bekommst, wenn
+        Mittlerweile ist ein Zugriff auf diesen über eine <b>spezielle App</b> möglich, mehr darüber findest du bei
+                <a href="https://www.als-korbach.de/service/organisatorisches/vertretungsplan">als-korbach.de</a>. <br>
+        Auf Grund dessen ist dieser Telegram-Bot seit dem 19.03.2021 nicht mehr aktiv.
+        <br>
+        <br>
+        Wäre es nicht praktisch, wenn du einfach eine Benachrichtigung auf dein Handy bekommst, wenn
         du Vertretung hast?
         <br>
-        Das <b>ermöglicht dir dieser Bot</b> (ein Computerprogramm, welches den Stundenplan automatisch überprüft).
+        Das ermöglicht dir dieser Bot (ein Computerprogramm, welches den Stundenplan automatisch überprüft).
         <br>
         <br>
         Alles was dazu brauchst ist Telegram. Damit kannst du den Bot benutzen.
     </p>
 
-    <h2>So funktioniert's</h2>
+    <h2>So hat es funktioniert</h2>
     <ul uk-accordion="collapsible: false" id="instructions-accordion">
-        <!-- Todo add expandable screenshots -->
         <li>
             <a class="uk-accordion-title" id="instructions-1-title">1. Hol dir Telegram</a>
             <div class="uk-accordion-content">
